# memxcore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml  workflow.yml
memxcore/: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  __init__.py  cli.py  config.yaml  mcp_server.py  requirements.txt  server.py
memxcore/benchmarks/: default.json
memxcore/core/: __init__.py  benchmark.py  bm25.py  compaction.py  knowledge_graph.py  memory_manager.py  mining.py  parsers.py  paths.py  rag.py  utils.py  watcher.py
memxcore/hooks/: auto_compact.py  auto_remember.py  cursor_stop.py  user_prompt_submit.py
memxcore/tests/: test_basic.py
